@@ -66,11 +66,15 @@ ull neg (ull x) { return -x; }
 void
 testTortureExecute (void)
 {
-#if 0 // TODO: Enable when long long literals are supported!
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_gbz80) // bug #2329
+#if !defined(__SDCC_hc08) && !defined(__SDCC_s08)
   gull = 100;
   DO_TESTS (RUN_TEST)
   if (neg (gull) != -100ULL)
     ASSERT (0);
   return;
+#endif
+#endif
 #endif
 }
