@@ -36,12 +36,13 @@ testTortureExecute (void)
 {
 // Some ports do not yet support long long
 #if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_hc08) && !defined(__SDCC_s08)
   if (sizeof (long long) != 8)
     return;
 
   if (foo (0) != 0)
     ASSERT (0);
-#if 0 // failed on MacOS and Windows
+
   if (foo (0xffffffffULL) != 0)
     ASSERT (0);
   if (foo (0x25ff00ff00ULL) != 0x25)
